# xencode

./: .coverage  .gitignore  .pre-commit-config.yaml  .xencode.example.json  AI_ML_LEVIATHAN_SUMMARY.md  CHANGELOG.md  CLI_DEMO.md  CLI_GUIDE.md  CRITICAL_FIXES.md  CRUSH.md  DEMO_IMMERSIVE.md  DOCUMENTATION.md  Dockerfile  ENHANCED_FEATURES.md  ENHANCEMENT_SYSTEMS_README.md  ENSEMBLE_IMPROVEMENTS.md  FINAL_SUMMARY.md  FIXES_COMPLETED.md  IMMERSIVE_MODE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  INSTALL_MANUAL.md  LICENSE  MANIFEST.in  MULTI_AGENT_ENHANCEMENT_PLAN.md  NEXT_PLAN.md  NEXT_PLAN_TASKS.md  PHASE1_COMPLETION_REPORT.md  PHASE1_PROGRESS.md  PHASE2_COMPLETION_REPORT.md  PLAN.md  QUICK_FIX_GUIDE.md  QUICK_START.md  README.md  README_FIXES.md  ROADMAP.md  SMART_MODEL_SELECTION.md  TECHNICAL_ROADMAP.md  WARP_TERMINAL_PROGRESS_REPORT.md  WEEK3_AI_COMPLETION_REPORT.md  (+102 more)
.xencode/: technical_debt.db
benchmarks/: performance_benchmarks.py
bytebot/: ByteBot_Plan.md
deployment/: deployment_automation.py
docs/: ARCHITECTURE_DIAGRAMS.md  FEATURE_PLAN.md  INSTALL_MANUAL.md  ROADMAP.md  USER_MANUAL.md  advanced_analytics_features.md  analytics_reporting_system.md  api_documentation.md  enhanced_security_scanning.md  performance_monitoring_dashboard.md  terminal_integration_tests.md  test_results.md
examples/: cli_review_example.md  context_analyzer_demo.py  error_handler_demo.py  learning_mode_demo.py  multi_language_cli_demo.py  multi_language_demo.py  report_generation_example.py  terminal_assistant_demo.py  tui_code_review_example.py
k8s/: deployment.yaml  postgres.yaml
monitoring/: prometheus.yml
plugins/: plugins.yaml
scripts/: cleanup_repo.py  install.sh  integration_example.py  security_integration_example.py  smoke_test_phase0.py  test.sh  test_claude_style.sh
temp/: demo_2_8887dc35-537a-4feb-b003-31b6e150fac8.txt  demo_3_1fdc7720-1698-4fec-b62b-3d9fb8a78c54.txt  demo_4_af04e1d3-74da-4948-aaa0-4c460a4c77f1.txt
temp_test_rag/: caller.py  sample.py  test_graph.json
tests/: __init__.py  conftest.py  integration_test_runner.py  run_security_tests.py  test_advanced_ai_system.py  test_advanced_analytics_engine.py  test_advanced_security.py  test_advanced_tools.py  test_ai_ensembles.py  test_analytics_infrastructure.py  test_analytics_monitoring.py  test_analytics_reporting_system.py  test_analytics_system_comprehensive.py  test_basic.py  test_basic_system_integration.py  test_cache_performance.py  test_code_analysis_comprehensive.py  test_comprehensive_audit_system.py  test_context_cache_manager.py  test_core_modules.py  test_devops.py  test_distributed_collaboration.py  test_document_processing_comprehensive.py  test_document_processor.py  test_enhanced_cli_integration.py  test_enhanced_security_analyzer.py  test_ensemble_integration.py  test_ethics_document_integration.py  test_file_operations_plugin.py  test_final_integration.py  test_gpu_performance.py  test_graph_rag.py  test_integration.py  test_integration_e2e.py  test_integration_infrastructure.py  test_memory.py  test_model_stability_manager.py  test_multimodal_cache.py  test_performance_benchmarking.py  test_performance_monitoring.py  (+25 more)
xencode/: __init__.py  advanced_analytics_engine.py  (+63 more)
(+331 files in other folders)
